# alexa_shopping_sync

./: CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  test_login_flow.py  test_sync_logic.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: lint.yml  tests.yml
alexa_shopping_sync.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
custom_components/alexa_shopping_sync/: __init__.py  amazon_client.py  auth.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  exceptions.py  ha_list_bridge.py  manifest.json  models.py  sensor.py  services.py  services.yaml  shopping_list_bridge.py  strings.json  switch.py  sync_engine.py  todo_list_bridge.py
custom_components/alexa_shopping_sync/translations/: de.json  en.json
tests/: __init__.py  conftest.py  test_amazon_client.py  test_auth.py  test_models.py  test_security.py  test_sync_engine.py  test_todo_list_bridge.py
